# fastapi-address-book-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
address_book/: auth.py  crud.py  database.py  exception_handler.py  exceptions.py  main.py  models.py  schemas.py  utils.py
address_book/routers/: account.py  address_books.py  contacts.py  shared_dependencies.py
tests/: README.md  test_main.py
tests/routers/: conftest.py  test_account.py  test_address_books.py  test_contacts.py
