[tool.poetry]
name = "address-book-api"
version = "1.0"
description = ""
authors = ["Julian Tan <julian.tanz@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.2"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
pyhumps = "^3.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
SQLAlchemy = "1.4.45"  # Patch versions higher than this will complain about SQLAlchemy 2.0 deprecations
requests = "2.29.0"  # Minor versions higher than this will cause a test to fail

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
